desafio complementario interaccion html

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
         <h1>Tienda</h1>
 
-        <div class="carritoLista"></div>
+        <div id="listaCliente" class="listaCliente"></div>
 
-        <div class="datosCliente"></div>
+        <div class="carritoDiv"></div>
 
     </main>
 
