--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
 
         <h1>Tienda</h1>
 
+        <form id="formCliente" action="" class="formulario">
+            <span>Nombre y Apellido:</span>
+            <input type="text" id="nombre" name="nombre" placeholder="Bruno Diaz">
+            <span>Direccion:</span>
+            <input type="text" id="direccion" name="direccion" placeholder="Siempreviva 123">
+            <span>Localidad:</span>
+            <input type="text" id="localidad" name="localidad" >
+            <span>Codigo Postal:</span>
+            <input type="number" id="codigoPostal" name="codigoPostal">
+            <button type="submit" id="boton">Enviar</button>
+        </form>
+
         <div id="listaCliente" class="listaCliente"></div>
 
         <div class="carritoDiv"></div>
