segunda pre entrega incompleta

--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
         </div>
     </nav>
 
-    <main class="bodyBirra">
-
+    <main id="main" class="bodyBirra">
+        
         <h1>Tienda</h1>
+        
+        <div id="carritoDiv" class="carritoDiv"></div>
+        <div id="listaSeleccion" class="listaSeleccion"></div>
 
         <form id="formCliente" action="" class="formulario">
             <span>Nombre y Apellido:</span>
@@ -77,7 +80,6 @@
 
         <div id="listaCliente" class="listaCliente"></div>
 
-        <div class="carritoDiv"></div>
 
     </main>
 
