--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
         
         <div id="carritoDiv" class="carritoDiv"></div>
         <div id="listaSeleccion" class="listaSeleccion"></div>
+        <button id="btnComprar">Comprar</button>
 
-        <form id="formCliente" action="" class="formulario">
+        <!-- <form id="formCliente" action="" class="formulario">
             <span>Nombre y Apellido:</span>
             <input type="text" id="nombre" name="nombre" placeholder="Bruno Diaz">
             <span>Direccion:</span>
@@ -76,7 +77,7 @@
             <span>Codigo Postal:</span>
             <input type="number" id="codigoPostal" name="codigoPostal">
             <button type="submit" id="boton">Enviar</button>
-        </form>
+        </form> -->
 
         <div id="listaCliente" class="listaCliente"></div>
 
@@ -123,6 +124,7 @@
     </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="./js/script.js"></script>
 </body>
 
